--- a/style.css
+++ b/style.css
@@ -198,34 +198,34 @@ span {
     font-size: 1.6rem;
     margin: 1rem 0 3rem;
 }
-.portfolio {
+.projects {
     background: var(--snd-bg-color);
 }
-.portfolio h2 {
+.projects h2 {
     margin-bottom: 4rem;
 }
-.portfolio-container {
+.projects-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
     gap: 2.5rem;
 }
-.portfolio-container .portfolio-box {
+.projects-container .projects-box {
     position: relative;
     border-radius: 2rem;
     box-shadow: 0 0 1rem var(--bg-color);
     overflow: hidden;
     display: flex;
 }
-.portfolio-box img {
+.projects-box img {
     width: 100%;
     transition: 0.5s ease;
     opacity: 0.7;
 }
-.portfolio-box:hover img {
+.projects-box:hover img {
     transform: scale(1,1);
 }
-.portfolio-box .portfolio-layer {
+.projects-box .projects-layer {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -241,17 +241,17 @@ span {
     transform: translateY(100%);
     transition: 0.5s ease;
 }
-.portfolio-box:hover .portfolio-layer {
+.projects-box:hover .projects-layer {
     transform: translateY(0);
 }
-.portfolio-layer h4 {
+.projects-layer h4 {
     font-size: 3rem;
 }
-.portfolio-layer p {
+.projects-layer p {
     font-size: 1.6rem;
     margin: 0.3rem 0 1rem;
 }
-.portfolio-layer a {
+.projects-layer a {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -260,7 +260,7 @@ span {
     background: var(--text-color);
     border-radius: 50%;
 }
-.portfolio-layer a i {
+.projects-layer a i {
     font-size: 2rem;
     color: var(--snd-bg-color);
 }
@@ -349,7 +349,7 @@ span {
     .services {
         padding: 7rem;
     }
-    .portfolio {
+    .projects {
         padding-bottom: 7rem;
     }
     .contact {
@@ -409,16 +409,16 @@ span {
     .services h2 {
         margin-bottom: 3rem;
     }
-    .portfolio h2 {
+    .projects h2 {
         margin-bottom: 3rem;
     }
-    .portfolio-container {
+    .projects-container {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media (max-width: 617px) {
-    .portfolio-container {
+    .projects-container {
         grid-template-columns: 1fr;
     }
     .home-img img {
